--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Dota2 Live Noti"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -57,3 +57,10 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NATIVEPHP_APP_NAME="Dota2 Live Noti"
+NATIVEPHP_APP_VERSION="1.0.0"
+NATIVEPHP_APP_ID="com.pyaesoneaung.dota2livenoti"
+NATIVEPHP_DEEPLINK_SCHEME="dota2livenoti"
+NATIVEPHP_APP_AUTHOR="Pyae Sone Aung"
+NATIVEPHP_UPDATER_ENABLED=false
